--- a/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="download_pause">In pausa</string>
-    <string name="download_percent">%d%%</string>
-    <string name="dialog_title">Download</string>
-    <string name="paused_dialog_msg">Vuoi mettere in pausa il download?</string>
-    <string name="resume_dialog_msg">Vuoi riprendere il download?</string>
     <string name="app_label">Download</string>
+    <string name="download_title">Download</string>
     <string name="download_title_sorted_by_date">Download - Ordinati per data</string>
     <string name="download_title_sorted_by_size">Download - Ordinati per dimensione</string>
     <string name="no_downloads">Nessun download.</string>
-    <string name="missing_title">&lt;Sconosciuto></string>
+    <string name="missing_title">Sconosciuto></string>
     <string name="button_sort_by_size">Ordina per dimensione</string>
     <string name="button_sort_by_date">Ordina per data</string>
     <string name="download_queued">In coda</string>
-    <string name="download_running">In corso</string>
-    <string name="download_success">Completato</string>
-    <string name="download_error">Non riuscito</string>
+    <string name="download_running">Downloading</string>
+    <string name="download_success">Complete</string>
+    <string name="download_error">Failed</string>
+    <string name="download_error_insufficient_space">Insufficient space</string>
     <string name="dialog_title_not_available">Download non riuscito</string>
     <string name="dialog_failed_body">Riprovare il download del file più tardi o eliminarlo dalla coda?</string>
     <string name="dialog_title_queued_body">File in coda</string>
     <string name="dialog_queued_body">Questo file è in coda per un futuro download, quindi non è ancora disponibile.</string>
+    <string name="dialog_file_missing_title">Failed to open file</string>
     <string name="dialog_file_missing_body">Impossibile trovare il file scaricato.</string>
     <string name="dialog_insufficient_space_on_external">Impossibile terminare il download. Spazio insufficiente nella memoria esterna.</string>
     <string name="dialog_insufficient_space_on_cache">Impossibile terminare il download. Spazio insufficiente nella memoria interna per i download.</string>
-    <string name="dialog_cannot_resume">Il download è stato interrotto ed è impossibile ripristinarlo.</string>
+    <string name="dialog_cannot_resume">Il download è stato interrotto ed è impossibile ripristinarlo.</string>    <string name="paused_dialog_msg">Vuoi mettere in pausa il download?</string>
     <string name="dialog_file_already_exists">Impossibile eseguire il download. File di destinazione già esistente.</string>
     <string name="dialog_media_not_found">Impossibile eseguire il download. Il supporto esterno non è disponibile.</string>
     <string name="download_no_application_title">Impossibile aprire il file</string>
@@ -36,4 +34,45 @@
     <string name="select_all">Seleziona tutto</string>
     <string name="selected_count">Selezionati %1$d di %2$d</string>
     <string name="download_share_dialog">Condividi tramite</string>
+    <string name="download_when_network_connected">Download using Mobile network</string>
+    <string name="download_paused">Download paused</string>
+    <string name="download_pending">Download pending</string>
+    <string name="download_info_start_deleted_tasks">Delete downloads</string>
+    <string name="download_info_count_deleted_tasks">%s downloads removed</string>
+    <string name="menu_preferences">Settings</string>
+    <string name="menu_enter_edit_mode">Editor</string>
+    <string name="delete_downloads_records">Delete downloads</string>
+    <string name="pause_download">Pause</string>
+    <string name="resume_download">Resume</string>
+    <string name="restart_download">Restart</string>
+    <string name="open_download">Open</string>
+    <string name="paused_by_app">Paused manually</string>
+    <string name="paused_queued_for_wifi">Waiting for Wi-Fi connection</string>
+    <string name="paused_waiting_for_network">Waiting for network connection</string>
+    <string name="paused_waiting_to_retry">Waiting to retry</string>
+    <string name="paused_unknown">Unknown error</string>
+    <string name="confirm_delete_downloads_message">%d selected downloads will be removed!</string>
+    <string name="confirm_delete_the_download_item_message">Confirm download removal!</string>
+    <string name="delete_the_downloaded_file">Delete the downloaded files.</string>
+    <string name="downloads_operating">Operating...</string>
+    <string name="select_operation_items">Please select items</string>
+    <string name="preferences_title">Settings</string>
+    <string name="pref_download_settings_title">Data usage prompt</string>
+    <string name="pref_title_enable_max_bytes_popup">Data download prompt</string>
+    <string name="pref_summary_enable_max_bytes_popup">"Under the operator's network, prompt pops up if file size exceeds the limit"</string>
+    <string name="pref_summary_max_bytes_limit_format">Prompt pops-up if file size exceeds %s</string>
+    <string name="pref_summary_any_bytes_popup">Always queue when using Wi-Fi network</string>
+    <string name="pref_summary_no_limit_popup">Download size is unlimited</string>
+    <string name="download_in_process">Downloading</string>
+    <string name="download_complete">Downloaded</string>
+    <string name="retry_after_network_available">Please retry when a network connection is available</string>
+    <string name="editmode_menu_share">Share</string>
+    <string name="editmode_menu_delete">Delete</string>
+    <string name="all_downloads">All downloads</string>
+    <string name="app_downloads">%s downloads</string>
+    <string name="turn_off_xunlei_message">You may experience slower download speeds.</string>
+    <string name="turn_off_xunlei_title">Disable Xunlei download engine</string>
+    <string name="xunlei_brand">Powered by Xunlei</string>
+    <string name="xunlei_brand_url">http://mobile.xunlei.com</string>
+    <string name="xunlei_switch">Xunlei download engine</string>
 </resources>
