--- a/Italian/main/Bluetooth.apk/res/values-it/strings.xml
+++ b/Italian/main/Bluetooth.apk/res/values-it/strings.xml
@@ -106,15 +106,15 @@
     <string name="miui_transfer_history_title">Trasferimenti Bluetooth</string>
     <string name="miui_transfer_inbound_title">Ricevuti</string>
     <string name="miui_transfer_outbound_title">Inviati</string>
-    <string name="permlab_bluetoothMap">Access Bluetooth Message Access Profile provider.</string>
-    <string name="permdesc_bluetoothMap">"Consente all'applicazioneAllows the app to access the Bluetooth Message Access Profile content provider and use it send messages to MAP messages to clients.</string>
-    <string name="permlab_fm_receiver">access FM receiver</string>
-    <string name="permdesc_fm_receiver">Allows an application to access the FM receiver functions.</string>
-    <string name="bt_advanced_settings">Bluetooth Advanced Settings</string>
+    <string name="permlab_bluetoothMap">Accedi al Profilo del Messaggio di Accesso Bluetooth.</string>
+    <string name="permdesc_bluetoothMap">"Consente all'applicazione di accedere al Profilo del Messaggio di Accesso Bluetooth del provider ed inviare messaggi MAP agli utenti.</string>
+    <string name="permlab_fm_receiver">Accesso ricevitore FM</string>
+    <string name="permdesc_fm_receiver">"Consenti ad un'applicazione di accedere alle funzioni del ricevitore FM."</string>
+    <string name="bt_advanced_settings">Impostazioni Avanzate Bluetooth</string>
     <string name="profile_hs_hfp">HS/HFP</string>
-    <string name="profile_description_hs_hfp">Headset/Handsfree Profile</string>
+    <string name="profile_description_hs_hfp">Profilo Cuffie/Mani Libere</string>
     <string name="profile_a2dp">A2DP</string>
-    <string name="profile_description_a2dp">A2DP Profile</string>
+    <string name="profile_description_a2dp">Profilo A2DP</string>
     <string name="profile_hid">HID Host</string>
     <string name="profile_description_hid">Human Interface Device (Host) Profile</string>
     <string name="profile_hdp">HDP</string>
@@ -129,11 +129,11 @@
     <string name="profile_description_ftp">File Transfer (Server) Profile</string>
     <string name="profile_mse">MAP</string>
     <string name="profile_description_mse">Message Access Profile</string>
-    <string name="title_bt_mse_settings">Bluetooth MAP Advanced Settings</string>
-    <string name="map_provider_smsmms_name">Messaging</string>
+    <string name="title_bt_mse_settings">Impostazioni Avanzate MAP Bluetooth</string>
+    <string name="map_provider_smsmms_name">Messaggi</string>
     <string name="map_datasource_sms_name">SMS</string>
     <string name="map_datasource_mms_name">MMS</string>
-    <string name="map_datasource_smsmms_name">SMS and MMS</string>
+    <string name="map_datasource_smsmms_name">SMS e MMS</string>
     <string name="pbap_session_key_dialog_title">Digita la chiave di sessione per %1$s</string>
     <string name="pbap_session_key_dialog_header">Chiave sessione Bluetooth necessaria</string>
     <string name="pbap_acceptance_timeout_message">"Timeout dell'accettazione della connessione con %1$s"</string>
