--- a/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -9,19 +9,19 @@
     <string name="button_sort_by_size">Ordina per dimensione</string>
     <string name="button_sort_by_date">Ordina per data</string>
     <string name="download_queued">In coda</string>
-    <string name="download_running">Downloading</string>
+    <string name="download_running">In download</string>
     <string name="download_success">Complete</string>
-    <string name="download_error">Failed</string>
-    <string name="download_error_insufficient_space">Insufficient space</string>
+    <string name="download_error">Fallito</string>
+    <string name="download_error_insufficient_space">Spazio insufficiente</string>
     <string name="dialog_title_not_available">Download non riuscito</string>
     <string name="dialog_failed_body">Riprovare il download del file più tardi o eliminarlo dalla coda?</string>
     <string name="dialog_title_queued_body">File in coda</string>
     <string name="dialog_queued_body">Questo file è in coda per un futuro download, quindi non è ancora disponibile.</string>
-    <string name="dialog_file_missing_title">Failed to open file</string>
+    <string name="dialog_file_missing_title">Impossibile aprire il file</string>
     <string name="dialog_file_missing_body">Impossibile trovare il file scaricato.</string>
     <string name="dialog_insufficient_space_on_external">Impossibile terminare il download. Spazio insufficiente nella memoria esterna.</string>
     <string name="dialog_insufficient_space_on_cache">Impossibile terminare il download. Spazio insufficiente nella memoria interna per i download.</string>
-    <string name="dialog_cannot_resume">Il download è stato interrotto ed è impossibile ripristinarlo.</string>    <string name="paused_dialog_msg">Vuoi mettere in pausa il download?</string>
+    <string name="dialog_cannot_resume">Il download è stato interrotto ed è impossibile ripristinarlo.</string>
     <string name="dialog_file_already_exists">Impossibile eseguire il download. File di destinazione già esistente.</string>
     <string name="dialog_media_not_found">Impossibile eseguire il download. Il supporto esterno non è disponibile.</string>
     <string name="download_no_application_title">Impossibile aprire il file</string>
@@ -34,44 +34,44 @@
     <string name="select_all">Seleziona tutto</string>
     <string name="selected_count">Selezionati %1$d di %2$d</string>
     <string name="download_share_dialog">Condividi tramite</string>
-    <string name="download_when_network_connected">Download using Mobile network</string>
-    <string name="download_paused">Download paused</string>
-    <string name="download_pending">Download pending</string>
-    <string name="download_info_start_deleted_tasks">Delete downloads</string>
-    <string name="download_info_count_deleted_tasks">%s downloads removed</string>
-    <string name="menu_preferences">Settings</string>
+    <string name="download_when_network_connected">Scarica utilizzando la rete dati mobile</string>
+    <string name="download_paused">Download in pausa</string>
+    <string name="download_pending">Download in attesa</string>
+    <string name="download_info_start_deleted_tasks">Elimina i download</string>
+    <string name="download_info_count_deleted_tasks">%s download rimossi</string>
+    <string name="menu_preferences">Impostazioni</string>
     <string name="menu_enter_edit_mode">Editor</string>
-    <string name="delete_downloads_records">Delete downloads</string>
-    <string name="pause_download">Pause</string>
-    <string name="resume_download">Resume</string>
-    <string name="restart_download">Restart</string>
-    <string name="open_download">Open</string>
-    <string name="paused_by_app">Paused manually</string>
-    <string name="paused_queued_for_wifi">Waiting for Wi-Fi connection</string>
-    <string name="paused_waiting_for_network">Waiting for network connection</string>
-    <string name="paused_waiting_to_retry">Waiting to retry</string>
-    <string name="paused_unknown">Unknown error</string>
-    <string name="confirm_delete_downloads_message">%d selected downloads will be removed!</string>
-    <string name="confirm_delete_the_download_item_message">Confirm download removal!</string>
-    <string name="delete_the_downloaded_file">Delete the downloaded files.</string>
-    <string name="downloads_operating">Operating...</string>
-    <string name="select_operation_items">Please select items</string>
-    <string name="preferences_title">Settings</string>
-    <string name="pref_download_settings_title">Data usage prompt</string>
-    <string name="pref_title_enable_max_bytes_popup">Data download prompt</string>
-    <string name="pref_summary_enable_max_bytes_popup">"Under the operator's network, prompt pops up if file size exceeds the limit"</string>
-    <string name="pref_summary_max_bytes_limit_format">Prompt pops-up if file size exceeds %s</string>
-    <string name="pref_summary_any_bytes_popup">Always queue when using Wi-Fi network</string>
-    <string name="pref_summary_no_limit_popup">Download size is unlimited</string>
-    <string name="download_in_process">Downloading</string>
-    <string name="download_complete">Downloaded</string>
-    <string name="retry_after_network_available">Please retry when a network connection is available</string>
-    <string name="editmode_menu_share">Share</string>
-    <string name="editmode_menu_delete">Delete</string>
-    <string name="all_downloads">All downloads</string>
-    <string name="app_downloads">%s downloads</string>
-    <string name="turn_off_xunlei_message">You may experience slower download speeds.</string>
-    <string name="turn_off_xunlei_title">Disable Xunlei download engine</string>
+    <string name="delete_downloads_records">Elimina download</string>
+    <string name="pause_download">Pausa</string>
+    <string name="resume_download">Riprendi</string>
+    <string name="restart_download">Riavvia</string>
+    <string name="open_download">Apri</string>
+    <string name="paused_by_app">Pausa manuale</string>
+    <string name="paused_queued_for_wifi">In attesa di connessione Wi-Fi</string>
+    <string name="paused_waiting_for_network">In attesa di connessione di rete</string>
+    <string name="paused_waiting_to_retry">In attesa di un nuovo tentativo</string>
+    <string name="paused_unknown">Errore sconosciuto</string>
+    <string name="confirm_delete_downloads_message">%d download selezionati verranno rimossi</string>
+    <string name="confirm_delete_the_download_item_message">Conferma rimozione download</string>
+    <string name="delete_the_downloaded_file">Elimina i file scaricati.</string>
+    <string name="downloads_operating">In esecuzione...</string>
+    <string name="select_operation_items">Seleziona elementi</string>
+    <string name="preferences_title">Impostazioni</string>
+    <string name="pref_download_settings_title">Autorizzazione utilizzo dati</string>
+    <string name="pref_title_enable_max_bytes_popup">Autorizzazione download dati</string>
+    <string name="pref_summary_enable_max_bytes_popup">Sotto rete dati mobile, comparirà una richiesta di autorizzazione se le dimensioni del file superano il limite</string>
+    <string name="pref_summary_max_bytes_limit_format">Chiedi autorizzazione se il file supera i %s</string>
+    <string name="pref_summary_any_bytes_popup">Metti sempre in coda con rete Wi-Fi</string>
+    <string name="pref_summary_no_limit_popup">Dimensione download illimitata</string>
+    <string name="download_in_process">Download in corso</string>
+    <string name="download_complete">Scaricati</string>
+    <string name="retry_after_network_available">Riprova quando ci sarà una rete disponibile.</string>
+    <string name="editmode_menu_share">Condividi</string>
+    <string name="editmode_menu_delete">Elimina</string>
+    <string name="all_downloads">Tutti i download</string>
+    <string name="app_downloads">%s download</string>
+    <string name="turn_off_xunlei_message">Potresti riscontrare velocità di download più lente.</string>
+    <string name="turn_off_xunlei_title">Disattiva il motore download Xunlei</string>
     <string name="xunlei_brand">Powered by Xunlei</string>
     <string name="xunlei_brand_url">http://mobile.xunlei.com</string>
     <string name="xunlei_switch">Xunlei download engine</string>
