mish fixes - first gruop

--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2333,7 +2333,7 @@ La SIM non lo supporta.</string>
     <string name="font_size_medium">Medii</string>
     <string name="font_size_large">Largi</string>
     <string name="font_size_huge">Gigante</string>
-    <string name="virus_scanner_title">Virus scanner</string>
+    <string name="virus_scanner_title">Scanner virus</string>
     <string name="virus_scanner_scanning">Scansione in corso…</string>
     <string name="virus_scanner_scan">Tocca per scansionare</string>
     <string name="virus_scanner_select_lib">Seleziona definizioni virus</string>
@@ -2382,14 +2382,14 @@ La SIM non lo supporta.</string>
     <string name="dolby_roomsize_low">Interno</string>
     <string name="dolby_roomsize_normal">Normale</string>
     <string name="dolby_roomsize_high">Esterno</string>
-    <string name="dolby_eq_enter_alert_title">Turn on Dolby music</string>
-    <string name="dolby_eq_enter_alert_msg">You can only use the EQ in Dolby music mode. Enable it now?</string>
-    <string name="dirac_switch_title">Mi Sound enhancer</string>
-    <string name="dirac_switch_summary">Always use Mi Sound enhancer when using speakers</string>
+    <string name="dolby_eq_enter_alert_title">Attiva Dolby</string>
+    <string name="dolby_eq_enter_alert_msg">"Puoi utilizzare l'equalizzatore solo in modalità Dolby. Attivarla adesso?"</string>
+    <string name="dirac_switch_title">Ottimizzazione Mi Sound</string>
+    <string name="dirac_switch_summary">"Utilizza sempre l'ottimizzazione Mi Sound quando usi gli altoparlanti"</string>
     <string name="dirac_mode_off">Dirac Disattivato</string>
-    <string name="dirac_mode_in_ear">Cuffie Xiaomi in-ear</string>
-    <string name="dirac_mode_earbuds">Auricolari Xiaomi earbuds</string>
-    <string name="dirac_mode_piston_100">Cuffie Xiaomi piston</string>
+    <string name="dirac_mode_in_ear">Auricolari Xiaomi in-ear</string>
+    <string name="dirac_mode_earbuds">Auricolari Xiaomi</string>
+    <string name="dirac_mode_piston_100">Auricolari Xiaomi piston</string>
     <string name="dirac_mode_general">Generale</string>
     <string name="equalizer">EQ</string>
     <string name="wifi_menu_wfd">Display wireless</string>
@@ -2453,7 +2453,7 @@ ed esegui il software."</string>
     <string name="enable_drive_mode">Modalità auto</string>
     <string name="drive_mode_title">Modalità auto</string>
     <string name="drive_mode_settings">Impostazioni modalità auto</string>
-    <string name="drive_mode_voice_report">Text-to-speech output</string>
+    <string name="drive_mode_voice_report">Lettura dei testi</string>
     <string name="drive_mode_phone_report">Info chiamata in arrivo</string>
     <string name="drive_mode_sms_report">Messaggi</string>
     <string name="drive_mode_invert_stop_report">Turn phone over to silence</string>
