--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2456,7 +2456,7 @@ ed esegui il software."</string>
     <string name="drive_mode_voice_report">Lettura dei testi</string>
     <string name="drive_mode_phone_report">Info chiamata in arrivo</string>
     <string name="drive_mode_sms_report">Messaggi</string>
-    <string name="drive_mode_invert_stop_report">Turn phone over to silence</string>
+    <string name="drive_mode_invert_stop_report">Capovolgi il dispositivo per silenziare</string>
     <string name="drive_mode_auto_reply">Risposta rapida</string>
     <string name="drive_mode_calling_auto_sms_reply">Rispsota alle chiamate</string>
     <string name="drive_mode_sms_auto_sms_reply">Risposta agli SMS</string>
@@ -2471,7 +2471,7 @@ ed esegui il software."</string>
     <string name="security_relative">Relativi alla sicurezza</string>
     <string name="privacy_relative">Relativi alla privacy</string>
     <string name="other_relative">Altri permessi</string>
-    <string name="permission_manage_title">Dettagli di %s permessi</string>
+    <string name="permission_manage_title">Dettagli permessi %s</string>
     <string name="filter_apps_cached">Nella cache</string>
     <string name="screen">Schermo</string>
     <string name="system">Sistema</string>
@@ -2495,7 +2495,7 @@ ed esegui il software."</string>
     <string name="dirac_control">Ottimizza qualità audio</string>
     <string name="lockpassword_pin_fixed_length">Il PIN deve essere di %d cifre</string>
     <string name="cancel_alert">Annullare i cambiamenti?</string>
-    <string name="android_beam_witch_label">Abilita Android Beam</string>
+    <string name="android_beam_witch_label">Attiva Android Beam</string>
     <string name="sim_management_title">Gesione SIM</string>
     <string name="sim_status_title">Stato SIM</string>
     <string name="slot_status_title">Informazione IMEI</string>
