framework-mui-res

--- a/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
@@ -65,14 +65,14 @@
     <string name="arbor_day">Arbor Day</string>
     <string name="fools_day">"April Fool's Day"</string>
     <string name="labour_day" />
-    <string name="chinese_youth_day">Youth Day</string>
-    <string name="childrens_day">"Children's Day"</string>
+    <string name="chinese_youth_day">Giornata della giovinezza</string>
+    <string name="childrens_day">Giornata dei figli</string>
     <string name="partys_day" />
     <string name="the_armys_day" />
     <string name="teachers_day" />
     <string name="national_day" />
-    <string name="christmas_day">Christmas Day</string>
-    <string name="peace_day">Peace Day</string>
+    <string name="christmas_day">Natale</string>
+    <string name="peace_day">Giornata della pace</string>
     <string name="anti_aggression_day" />
     <string name="tw_youth_day" />
     <string name="tw_childrens_day" />
@@ -86,7 +86,7 @@
     <string name="the_rains" />
     <string name="insects_awaken" />
     <string name="vernal_equinox" />
-    <string name="clear_and_bright">Clear and Bright</string>
+    <string name="clear_and_bright">Chiaro e luminoso</string>
     <string name="grain_rain" />
     <string name="summer_begins" />
     <string name="grain_buds" />
@@ -94,11 +94,11 @@
     <string name="summer_solstice" />
     <string name="slight_heat" />
     <string name="great_heat" />
-    <string name="autumn_begins">Fall Begins</string>
+    <string name="autumn_begins">Inizio autunno</string>
     <string name="stopping_the_heat" />
     <string name="white_dews" />
-    <string name="autumn_equinox">Fall Equinox</string>
-    <string name="cold_dews">Cold dew</string>
+    <string name="autumn_equinox">Equinozio autunnale</string>
+    <string name="cold_dews">Rugiada fredda</string>
     <string name="hoar_frost_falls" />
     <string name="winter_begins" />
     <string name="light_snow" />
