small fix chinese festivity name

--- a/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
@@ -86,7 +86,7 @@
     <string name="the_rains" />
     <string name="insects_awaken" />
     <string name="vernal_equinox" />
-    <string name="clear_and_bright">Chiaro e luminoso</string>
+    <string name="clear_and_bright">Qingming Festiva</string>
     <string name="grain_rain" />
     <string name="summer_begins" />
     <string name="grain_buds" />
