small fix chinese festivity name

--- a/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
@@ -86,7 +86,7 @@
     <string name="the_rains" />
     <string name="insects_awaken" />
     <string name="vernal_equinox" />
-    <string name="clear_and_bright">Qingming Festiva</string>
+    <string name="clear_and_bright">Qingming Festival</string>
     <string name="grain_rain" />
     <string name="summer_begins" />
     <string name="grain_buds" />
@@ -98,7 +98,7 @@
     <string name="stopping_the_heat" />
     <string name="white_dews" />
     <string name="autumn_equinox">Equinozio autunnale</string>
-    <string name="cold_dews">Rugiada fredda</string>
+    <string name="cold_dews">Giornata della rugiada fredda</string>
     <string name="hoar_frost_falls" />
     <string name="winter_begins" />
     <string name="light_snow" />
