small fix chinese festivity name

--- a/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
@@ -62,8 +62,8 @@
     <string name="new_years_day" />
     <string name="valentines_day" />
     <string name="international_womens_day" />
-    <string name="arbor_day">Arbor Day</string>
-    <string name="fools_day">"April Fool's Day"</string>
+    <string name="arbor_day">Giornata degli alberi</string>
+    <string name="fools_day">"Pesce d'Aprile"</string>
     <string name="labour_day" />
     <string name="chinese_youth_day">Giornata della giovinezza</string>
     <string name="childrens_day">Giornata dei figli</string>
