--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2059,34 +2059,34 @@ Disabilitare le finestre flottanti?"</string>
     <string name="dndm_repeated_call_summary_3min">Se lo stesso numero ti richiama entro tre minuti il telefono suonerà</string>
     <string name="dndm_twelve_hour_time_format">a h:mm</string>
     <string name="dndm_twenty_four_hour_time_format">HH:mm</string>
-    <string name="search_airplane">aereo</string>
-    <string name="search_network">rete</string>
-    <string name="search_wifi">wi-fi</string>
-    <string name="search_bluetooth">blutooth</string>
-    <string name="search_android_beam">beam</string>
-    <string name="search_vpn">vpn</string>
-    <string name="search_tether">tether</string>
-    <string name="search_brightness">luminosità</string>
-    <string name="search_wallpaper">sfondo</string>
-    <string name="search_launcher">launcher</string>
-    <string name="search_accelerometer">accelerometro</string>
-    <string name="search_screen_timeout">spegnimento schermo</string>
-    <string name="search_ring_volume">vuole suoneria</string>
-    <string name="search_ringtone">suoneria</string>
-    <string name="search_sms_received">sms ricevuto</string>
-    <string name="search_silent">silent</string>
-    <string name="search_unlock_set">unlock set</string>
-    <string name="search_access_control">controllo accesso</string>
-    <string name="search_gps">gps</string>
-    <string name="search_status_bar">barra di stato</string>
-    <string name="search_sync">sincr.</string>
-    <string name="search_battery_indicator">indicatore batteria</string>
-    <string name="search_key">tasto</string>
-    <string name="search_led">led</string>
-    <string name="search_date_time">data e ora</string>
-    <string name="search_language">lingua</string>
-    <string name="search_about">informazioni</string>
-    <string name="search_power_mode">modalità alimentazione</string>
+    <string name="search_airplane">Modalità aereo</string>
+    <string name="search_network">Rete</string>
+    <string name="search_wifi">Wi-fi</string>
+    <string name="search_bluetooth">Bluetooth</string>
+    <string name="search_android_beam">Beam</string>
+    <string name="search_vpn">VPN</string>
+    <string name="search_tether">Tethering</string>
+    <string name="search_brightness">Luminosità</string>
+    <string name="search_wallpaper">Sfondo</string>
+    <string name="search_launcher">Launcher</string>
+    <string name="search_accelerometer">Accelerometro</string>
+    <string name="search_screen_timeout">Disattivazione schermo</string>
+    <string name="search_ring_volume">Volume suoneria</string>
+    <string name="search_ringtone">Suoneria</string>
+    <string name="search_sms_received">SMS ricevuti</string>
+    <string name="search_silent">Silenzioso</string>
+    <string name="search_unlock_set">Sblocco</string>
+    <string name="search_access_control">Accesso</string>
+    <string name="search_gps">GPS</string>
+    <string name="search_status_bar">Barra di stato</string>
+    <string name="search_sync">Sincronizzazione</string>
+    <string name="search_battery_indicator">Indicatore batteria</string>
+    <string name="search_key">Tasti</string>
+    <string name="search_led">LED</string>
+    <string name="search_date_time">Ora e data</string>
+    <string name="search_language">Lingua</string>
+    <string name="search_about">Informazioni</string>
+    <string name="search_power_mode">Profilo di consumo</string>
     <string name="debug_log">Programma esperienza utente</string>
     <string name="upload_debug_log_title">Programma esperienza utente</string>
     <string name="upload_debug_log_summary">"Aiuta Xiaomi a migliorare i suoi prodotti ed i suoi servizi inviando dati anonimi di diagnostica e sull'utilizzo"</string>
@@ -2128,7 +2128,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="apn_mms">MMS</string>
     <string name="apn_general">Generale</string>
     <string name="launcher_settings_title">Launcher</string>
-    <string name="screen_timeout_title">Modalità sleep</string>
+    <string name="screen_timeout_title">Disattivazione schermo</string>
     <string name="touch_title">Touch</string>
     <string name="touch_sensitive_title">Modalità guantyi</string>
     <string name="touch_sensitive_summary">"Rende lo schermo touch paticolarmente sensibile consentendone l'uso mentre indossi dei guanti"</string>
@@ -2136,7 +2136,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="touch_sensitive_turn_off_summary">Disabilitare anche Prevenzione chiamate dalla tasca?</string>
     <string name="touch_sensitive_turn_off_confirm">OK</string>
     <string name="touch_sensitive_turn_off_cancel">Annulla</string>
-    <string name="screen_never_timeout_title">Non andare mai in sleep</string>
+    <string name="screen_never_timeout_title">Non disattivare mai</string>
     <string name="screen_on_proximity_sensor_title">Prevenzione chiamate dalla tasca</string>
     <string name="screen_on_proximity_sensor_summary">Il dispositivo si bloccherà automaticaqmente quando riposto in una tasca</string>
     <string name="preferred_launcher_title">Launcher preferito</string>
@@ -2160,7 +2160,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="under_keyguard">Schermata di blocco</string>
     <string name="enable_snapshot_screenlock">Premi a lungo Indietro avvia la fotocamera</string>
     <string name="disable_power_key_long_press_under_keyguard">Disabilita menu pulsante accensione</string>
-    <string name="trackball_wake_title">Trackball wake</string>
+    <string name="trackball_wake_title">Attivazione con trackball</string>
     <string name="pref_volume_wake_title">Risveglio con i tasti del volume</string>
     <string name="pref_volume_wake_summary">Premendo i tasti del volume il dispositivo viene risvegliato</string>
     <string name="media_button">Tasto media</string>
@@ -2171,7 +2171,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="camera_key_action_category_title">"L'uso della fotocamera non è permesso"</string>
     <string name="camera_key_action_none_title">Nessuna azione</string>
     <string name="camera_key_action_shortcut_title">Scorciatoia</string>
-    <string name="camera_key_action_toggle_title">Trigger toggle</string>
+    <string name="camera_key_action_toggle_title">Comando di attivazione</string>
     <string name="camera_key_action_app_title">Apri app</string>
     <string name="camera_key_action_shortcut_home">Vai alla Home</string>
     <string name="camera_key_action_shortcut_screenshot">Screenshot</string>
@@ -2205,20 +2205,20 @@ Disabilitare le finestre flottanti?"</string>
     <string name="manually_add_network">Aggiungi rete</string>
     <string name="network_detail">Dettagli rete  %s</string>
     <string name="connected_wifi">Connesso</string>
-    <string name="incoming_call_breathing_light_color_title">Calls light color</string>
-    <string name="notification_breathing_light_color_title">Notifications light color</string>
-    <string name="mms_breathing_light_color_title">Messages light color</string>
-    <string name="breathing_light_color_menu_title">Light color</string>
-    <string name="breathing_light_color_summary">LED color when receiving new notification</string>
-    <string name="breathing_light_freq_title">LED flash frequency</string>
-    <string name="incoming_call_breathing_light_freq_title">Calls LED flash frequency</string>
-    <string name="notification_breathing_light_freq_title">Notifications LED flash frequency</string>
-    <string name="mms_breathing_light_freq_title">Messages LED flash frequency</string>
-    <string name="breathing_light_freq_summary">Pulse when you have new notifications</string>
-    <string name="led_settings">Notification light</string>
-    <string name="led_colors_summary">Notifications</string>
-    <string name="led_frequence_summary">Set the interval between LED flashes</string>
-    <string name="led_pulse_summary">Pulse notification light when new notification is received</string>
+    <string name="incoming_call_breathing_light_color_title">Colore LED chiamate</string>
+    <string name="notification_breathing_light_color_title">Colore LED notifiche</string>
+    <string name="mms_breathing_light_color_title">Colore LED messaggi</string>
+    <string name="breathing_light_color_menu_title">Colore luce</string>
+    <string name="breathing_light_color_summary">Colore LED quando si ricevono nuove notifiche</string>
+    <string name="breathing_light_freq_title">Frequenza lampeggio LED</string>
+    <string name="incoming_call_breathing_light_freq_title">Frequenza lampeggio LED chiamate</string>
+    <string name="notification_breathing_light_freq_title">Frequenza lampeggio LED notifiche</string>
+    <string name="mms_breathing_light_freq_title">Frequenza lampeggio LED messaggi</string>
+    <string name="breathing_light_freq_summary">Lampeggia quando ricevi nuove notifiche</string>
+    <string name="led_settings">Luca notifica</string>
+    <string name="led_colors_summary">Notifiche</string>
+    <string name="led_frequence_summary">"Imposta l'intervallo tra i lampeggi del LED"</string>
+    <string name="led_pulse_summary">Lampeggia quando ricevi nuove notifiche</string>
     <string name="show_rounded_corners">Mostra angoli arrotondati</string>
     <string name="pref_operational_key">Tasto funzionale</string>
     <string name="pref_button_light">Luce tasto</string>
@@ -2281,7 +2281,7 @@ La SIM non lo supporta.</string>
     <string name="wifi_wapi_cert_mgmt_as_format_is_wrong">Il formato del certificato AS non è corretto.</string>
     <string name="wifi_wapi_cert_mgmt_user_format_is_wrong">Formato del certificato utente errato.</string>
     <string name="wifi_wapi_cert_mgmt_user_name_is_empty">Inserisci il nome del certificato utente</string>
-    <string name="wifi_wapi_cert_mgmt_user_dont_exist">Enter user certificate name</string>
+    <string name="wifi_wapi_cert_mgmt_user_dont_exist">Utente non esistente</string>
     <string name="wifi_context_menu_connect">Connetti</string>
     <string name="wifi_context_menu_forget">Dimentica</string>
     <string name="wifi_context_menu_change_password">Cambia password</string>
