Fine tuining with LED options

--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -681,7 +681,7 @@ La configurazione del tablet può richiedere notevole attività di rete."</strin
     <string name="ring_volume_title">Volume suoneria</string>
     <string name="vibrate_in_silent_title">Vibra in modalità silenziosa</string>
     <string name="notification_sound_title">Suono di notifica predefinito</string>
-    <string name="notification_pulse_title">Luce di notifica pulsante</string>
+    <string name="notification_pulse_title">LED di notifica pulsante</string>
     <string name="incoming_call_volume_title">Suoneria</string>
     <string name="notification_volume_title">Notifica</string>
     <string name="checkbox_notification_same_as_incoming_call">Usa volume chiamate in entrata per le notifiche</string>
@@ -2208,22 +2208,22 @@ Disabilitare le finestre flottanti?"</string>
     <string name="incoming_call_breathing_light_color_title">Colore LED chiamate</string>
     <string name="notification_breathing_light_color_title">Colore LED notifiche</string>
     <string name="mms_breathing_light_color_title">Colore LED messaggi</string>
-    <string name="breathing_light_color_menu_title">Colore luce</string>
+    <string name="breathing_light_color_menu_title">Colore LED</string>
     <string name="breathing_light_color_summary">Colore LED quando si ricevono nuove notifiche</string>
     <string name="breathing_light_freq_title">Frequenza lampeggio LED</string>
     <string name="incoming_call_breathing_light_freq_title">Frequenza lampeggio LED chiamate</string>
     <string name="notification_breathing_light_freq_title">Frequenza lampeggio LED notifiche</string>
     <string name="mms_breathing_light_freq_title">Frequenza lampeggio LED messaggi</string>
     <string name="breathing_light_freq_summary">Lampeggia quando ricevi nuove notifiche</string>
-    <string name="led_settings">Luca notifica</string>
+    <string name="led_settings">LED notifica</string>
     <string name="led_colors_summary">Notifiche</string>
     <string name="led_frequence_summary">"Imposta l'intervallo tra i lampeggi del LED"</string>
     <string name="led_pulse_summary">Lampeggia quando ricevi nuove notifiche</string>
     <string name="show_rounded_corners">Mostra angoli arrotondati</string>
     <string name="pref_operational_key">Tasto funzionale</string>
-    <string name="pref_button_light">Luce tasto</string>
+    <string name="pref_button_light">Luce tasti</string>
     <string name="pref_button_light_summary">Indicatore tasti Menu, Home e Indietro</string>
-    <string name="button_light_timeout">Impostazione luce tasto</string>
+    <string name="button_light_timeout">Impostazione luce tasti</string>
     <string name="headset_settings">Cuffie</string>
     <string name="headset_function">Funzione del pulsante</string>
     <string name="headset_mode_volume">Controllo livello volume</string>
